fix: navbar z-index

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 header {
     background: var(--burgundy);
     position: sticky;
+    z-index: 1000;
 }
 
 .navbar {
